src/objects/FMP_Farm_Scores__c.object
<CustomObject>
    <fields>
        <fullName>Enviromental_Management_Score__c</fullName>
        <label>Enviromental Management Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_Management_Plan__c</fullName>
        <label>Farm Management Plan</label>
        <referenceTo>Farm_Management_Plan__c</referenceTo>
        <relationshipLabel>FMP Farm Scores</relationshipLabel>
        <relationshipName>FMP_Farm_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Farm_Name__c</fullName>
        <label>Farm Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harvest_and_Post_Harvest_Score__c</fullName>
        <label>Harvest and Post Harvest Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lots_Score__c</fullName>
        <label>Lots Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIPE_Score__c</fullName>
        <label>MIPE Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mill_Score__c</fullName>
        <label>Mill Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pesticide_Management_Score__c</fullName>
        <label>Pesticide Management Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registries_Score__c</fullName>
        <label>Registries Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seedbed_Score__c</fullName>
        <label>Seedbed Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shadow_Management_Score__c</fullName>
        <label>Shadow Management Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soil_Conservation_Score__c</fullName>
        <label>Soil Conservation Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undergrowth_Control_Score__c</fullName>
        <label>Undergrowth Control Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>FMP Farm Scores</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>FMP Farm Scores Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FMP Farm Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>